--- a/.travis.yml
+++ b/.travis.yml
@@ -34,3 +34,10 @@ script:
   - if [ "$CXX" = "clang++" ]; then export CXX="clang++-3.7" CC="clang-3.7"; fi
   - cmake -DCMAKE_BUILD_TYPE=Release ..
   - make
+
+notifications:
+  email:
+    recipients:
+      - mateusz@loskot.net
+    on_success: change # [always|never|change] # default: change
+    on_failure: always # [always|never|change] # default: always
