Install libc6-i386 for -m32

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,7 @@ matrix:
             - *apt-common
             - g++-5
             - g++-5-multilib
+            - libc6-i386
     - env: CCOMPILER=gcc-5 CXXCOMPILER=g++-5 ARCH=-m64
       compiler: gcc
       addons:
