--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,7 @@ matrix:
             - g++-5
             - g++-5-multilib
             - gcc-5-multilib
+            - gcc-multilib # https://lists.debian.org/debian-gcc/2016/04/msg00120.html
     - env: MYCC=gcc-5 MYCXX=g++-5 ARCH=-m64
       compiler: gcc
       addons:
