Fix AppVeyor platform

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,7 +3,7 @@ version: 1.0.{build}
 os: Visual Studio 2015
 
 platform:
-  - x86
+  - Win32
   - x64
 
 configuration:
@@ -18,10 +18,10 @@ matrix:
 
 before_build:
   - ps: |
-      if ($env:PLATFORM -Match "x86") {
-        $G="Visual Studio 14 2015"
-      } elseif ($env:PLATFORM -Match "x64") {
+      if ($env:PLATFORM -Match "x64") {
         $G="Visual Studio 14 2015 Win64"
+      } else {
+        $G="Visual Studio 14 2015"
       }
       Write-Host "Running CMake:" -ForegroundColor Magenta
       cmake.exe -G $G -DCMAKE_BUILD_TYPE:STRING=Release $env:APPVEYOR_BUILD_FOLDER
