--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -25,6 +25,10 @@ message(STATUS "Configuring build target")
 add_executable(string_benchmark ${headers} ${sources})
 add_dependencies(string_benchmark hayai)
 include_directories(${HAYAI_INCLUDE_DIR})
+if(Boost_FOUND)
+  include_directories(${Boost_INCLUDE_DIRS})
+  add_definitions("-DHAS_BOOST")
+endif()
 
 message(STATUS "Configuring run target")
 add_custom_target(run ALL $<TARGET_FILE:string_benchmark> DEPENDS string_benchmark)
