Switch to libboost1.55-dev

--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ matrix:
             - g++-5-multilib
             - gcc-5-multilib
             - gcc-multilib # https://lists.debian.org/debian-gcc/2016/04/msg00120.html
-            - libboost-all-dev
+            - libboost1.55-dev
     - env: MYCC=gcc-5 MYCXX=g++-5 ARCH=-m64
       compiler: gcc
       addons:
@@ -35,7 +35,7 @@ matrix:
           packages:
             - *apt-common
             - g++-5
-            - libboost-all-dev
+            - libboost1.55-dev
 script:
   - >
      mkdir -p build &&
