--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,6 @@
 cmake_minimum_required(VERSION 2.8)
 project(string_benchmark CXX)
+include(ExternalProject)
 
 if(NOT CMAKE_BUILD_TYPE)
     set(CMAKE_BUILD_TYPE "Release" CACHE STRING
@@ -7,36 +8,6 @@ if(NOT CMAKE_BUILD_TYPE)
         FORCE)
     message(STATUS "Configuring default CMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}")
 endif()
-
-find_package(Git REQUIRED)
-
-include(ExternalProject)
-message(STATUS "Configuring Celero")
-set (CELERO_PREFIX ${CMAKE_BINARY_DIR}/celero)
-set (CELERO_INSTALL_PREFIX ${CELERO_PREFIX}/install)
-ExternalProject_Add(
-    celero
-    PREFIX ${CELERO_PREFIX}
-    GIT_REPOSITORY https://github.com/DigitalInBlue/Celero.git
-    GIT_TAG master
-    GIT_SHALLOW 1
-    TIMEOUT 10
-    UPDATE_COMMAND ${GIT_EXECUTABLE} pull
-    BINARY_DIR ${CELERO_PREFIX}/build
-    CMAKE_ARGS
-      -DCMAKE_INSTALL_PREFIX=${CELERO_INSTALL_PREFIX}
-      -DCELERO_COMPILE_DYNAMIC_LIBRARIES:BOOL=OFF
-      -DCELERO_ENABLE_EXPERIMENTS:BOOL=OFF
-      -DCELERO_ENABLE_FOLDERS:BOOL=OFF
-    BUILD_COMMAND "${CMAKE_COMMAND}" --build ${CELERO_PREFIX}/build --config Release
-)
-find_package(Boost 1.54.0)
-message(STATUS "CELERO_PREFIX=${CELERO_PREFIX}")
-message(STATUS "CELERO_INSTALL_PREFIX=${CELERO_INSTALL_PREFIX}")
-
-find_package(Boost 1.54.0)
-message(STATUS "Boost_FOUND=${Boost_FOUND}")
-message(STATUS "Boost_INCLUDE_DIRS=${Boost_INCLUDE_DIRS}")
 
 if(CMAKE_CXX_COMPILER_ID STREQUAL "Clang" OR CMAKE_COMPILER_IS_GNUCXX)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror")
@@ -62,11 +33,54 @@ if(MSVC)
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /MP")
 endif()
 
+find_package(Git REQUIRED)
+
+message(STATUS "Configuring Catch")
+ExternalProject_Add(
+  catch
+  PREFIX ${CMAKE_BINARY_DIR}/catch
+  GIT_REPOSITORY https://github.com/philsquared/Catch.git
+  TIMEOUT 10
+  UPDATE_COMMAND ${GIT_EXECUTABLE} pull
+  CONFIGURE_COMMAND ""
+  BUILD_COMMAND ""
+  INSTALL_COMMAND ""
+  LOG_DOWNLOAD ON)
+ExternalProject_Get_Property(catch SOURCE_DIR)
+set(CATCH_INCLUDE_DIR ${SOURCE_DIR}/include CACHE INTERNAL "Path to Catch include directory")
+include_directories(${CATCH_INCLUDE_DIR})
+message(STATUS "CATCH_INCLUDE_DIR=${CATCH_INCLUDE_DIR}")
+
+message(STATUS "Configuring Celero")
+set (CELERO_PREFIX ${CMAKE_BINARY_DIR}/celero)
+set (CELERO_INSTALL_PREFIX ${CELERO_PREFIX}/install)
+ExternalProject_Add(
+    celero
+    PREFIX ${CELERO_PREFIX}
+    GIT_REPOSITORY https://github.com/DigitalInBlue/Celero.git
+    GIT_TAG master
+    GIT_SHALLOW 1
+    TIMEOUT 10
+    UPDATE_COMMAND ${GIT_EXECUTABLE} pull
+    BINARY_DIR ${CELERO_PREFIX}/build
+    CMAKE_ARGS
+      -DCMAKE_INSTALL_PREFIX=${CELERO_INSTALL_PREFIX}
+      -DCELERO_COMPILE_DYNAMIC_LIBRARIES:BOOL=OFF
+      -DCELERO_ENABLE_EXPERIMENTS:BOOL=OFF
+      -DCELERO_ENABLE_FOLDERS:BOOL=OFF
+    BUILD_COMMAND "${CMAKE_COMMAND}" --build ${CELERO_PREFIX}/build --config Release
+)
+message(STATUS "CELERO_PREFIX=${CELERO_PREFIX}")
+message(STATUS "CELERO_INSTALL_PREFIX=${CELERO_INSTALL_PREFIX}")
 include_directories(${CELERO_INSTALL_PREFIX}/include)
+
+find_package(Boost 1.54.0)
 if(Boost_FOUND)
   include_directories(${Boost_INCLUDE_DIRS})
   add_definitions("-DHAS_BOOST")
 endif()
+message(STATUS "Boost_FOUND=${Boost_FOUND}")
+message(STATUS "Boost_INCLUDE_DIRS=${Boost_INCLUDE_DIRS}")
 
 file(GLOB headers *.hpp)
 file(GLOB sources fixture.cpp)
