Investigating Travis CI issue wit git clone

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -93,21 +93,21 @@ foreach(test ${tests})
   add_custom_target(run_${test} ALL $<TARGET_FILE:${test}> DEPENDS ${test})
 endforeach()
 
-# file(GLOB headers *.hpp)
-# file(GLOB sources fixture.cpp)
-# set(benchmarks benchmark_istarts_with)
+file(GLOB headers *.hpp)
+file(GLOB sources fixture.cpp)
+set(benchmarks benchmark_istarts_with)
 
-# foreach(benchmark ${benchmarks})
-#   message(STATUS "Configuring benchmark: ${benchmark}")
-#   add_executable(${benchmark} ${benchmark}.cpp ${sources} ${headers})
+foreach(benchmark ${benchmarks})
+  message(STATUS "Configuring benchmark: ${benchmark}")
+  add_executable(${benchmark} ${benchmark}.cpp ${sources} ${headers})
 
-#   if(MSVC)
-#     target_link_libraries(${benchmark} debug ${CELERO_INSTALL_PREFIX}/lib/celerod.lib PowrProf.lib)
-#     target_link_libraries(${benchmark} optimized ${CELERO_INSTALL_PREFIX}/lib/celero.lib PowrProf.lib)
-#   elseif (UNIX)
-#     target_link_libraries(${benchmark} ${CELERO_INSTALL_PREFIX}/lib/libcelero.lib)
-#   endif()
+  if(MSVC)
+    target_link_libraries(${benchmark} debug ${CELERO_INSTALL_PREFIX}/lib/celerod.lib PowrProf.lib)
+    target_link_libraries(${benchmark} optimized ${CELERO_INSTALL_PREFIX}/lib/celero.lib PowrProf.lib)
+  elseif (UNIX)
+    target_link_libraries(${benchmark} ${CELERO_INSTALL_PREFIX}/lib/libcelero.lib)
+  endif()
 
-#   add_dependencies(${benchmark} celero)
-#   add_custom_target(run_${benchmark} ALL $<TARGET_FILE:${benchmark}> DEPENDS ${benchmark})
-# endforeach()
+  add_dependencies(${benchmark} celero)
+  add_custom_target(run_${benchmark} ALL $<TARGET_FILE:${benchmark}> DEPENDS ${benchmark})
+endforeach()
