Add imported target for celero

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 2.8)
 project(string_benchmark CXX)
+
 include(ExternalProject)
+enable_testing()
 
 if(NOT CMAKE_BUILD_TYPE)
     set(CMAKE_BUILD_TYPE "Release" CACHE STRING
@@ -33,21 +35,29 @@ if(MSVC)
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /MP")
 endif()
 
+find_package(Boost 1.54.0)
+if(Boost_FOUND)
+  include_directories(${Boost_INCLUDE_DIRS})
+  add_definitions("-DHAS_BOOST")
+endif()
+message(STATUS "Boost_FOUND=${Boost_FOUND}")
+message(STATUS "Boost_INCLUDE_DIRS=${Boost_INCLUDE_DIRS}")
+
 find_package(Git REQUIRED)
 
 message(STATUS "Configuring Catch")
 ExternalProject_Add(
-  catch
+  dep_catch
   PREFIX ${CMAKE_BINARY_DIR}/catch
   GIT_REPOSITORY https://github.com/philsquared/Catch.git
   GIT_TAG master
   TIMEOUT 10
-  UPDATE_COMMAND ${GIT_EXECUTABLE} pull
+  UPDATE_COMMAND ""
   CONFIGURE_COMMAND ""
   BUILD_COMMAND ""
   INSTALL_COMMAND ""
   LOG_DOWNLOAD ON)
-ExternalProject_Get_Property(catch SOURCE_DIR)
+ExternalProject_Get_Property(dep_catch SOURCE_DIR)
 set(CATCH_INCLUDE_DIR ${SOURCE_DIR}/include CACHE INTERNAL "Path to Catch include directory")
 include_directories(${CATCH_INCLUDE_DIR})
 message(STATUS "CATCH_INCLUDE_DIR=${CATCH_INCLUDE_DIR}")
@@ -56,12 +66,12 @@ message(STATUS "Configuring Celero")
 set (CELERO_PREFIX ${CMAKE_BINARY_DIR}/celero)
 set (CELERO_INSTALL_PREFIX ${CELERO_PREFIX}/install)
 ExternalProject_Add(
-    celero
+    dep_celero
     PREFIX ${CELERO_PREFIX}
     GIT_REPOSITORY https://github.com/DigitalInBlue/Celero.git
     GIT_TAG master
     TIMEOUT 10
-    UPDATE_COMMAND ${GIT_EXECUTABLE} pull
+    UPDATE_COMMAND ""
     BINARY_DIR ${CELERO_PREFIX}/build
     CMAKE_ARGS
       -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}
@@ -73,22 +83,24 @@ ExternalProject_Add(
 )
 message(STATUS "CELERO_PREFIX=${CELERO_PREFIX}")
 message(STATUS "CELERO_INSTALL_PREFIX=${CELERO_INSTALL_PREFIX}")
+add_library(celero STATIC IMPORTED)
+add_dependencies(celero dep_celero)
 include_directories(${CELERO_INSTALL_PREFIX}/include)
-
-find_package(Boost 1.54.0)
-if(Boost_FOUND)
-  include_directories(${Boost_INCLUDE_DIRS})
-  add_definitions("-DHAS_BOOST")
+if(UNIX)
+  set_target_properties(celero PROPERTIES
+    IMPORTED_LOCATION "${CELERO_INSTALL_PREFIX}/lib/libcelero.a")
+elseif(MSVC)
+  set_target_properties(celero PROPERTIES
+    IMPORTED_LOCATION_Debug "${CELERO_INSTALL_PREFIX}/lib/celerod.lib"
+    IMPORTED_LOCATION_Release "${CELERO_INSTALL_PREFIX}/lib/celero.lib")
+  set(CELERO_EXTRA_LIBS PowrProf.lib)
 endif()
-message(STATUS "Boost_FOUND=${Boost_FOUND}")
-message(STATUS "Boost_INCLUDE_DIRS=${Boost_INCLUDE_DIRS}")
 
-enable_testing()
 set(tests test_fixture)
 foreach(test ${tests})
   message(STATUS "Configuring test: ${test}")
   add_executable(${test} ${test}.cpp)
-  add_dependencies(${test} catch)
+  add_dependencies(${test} dep_catch)
   add_test(NAME ${test} COMMAND ${test})
   add_custom_target(run_${test} ALL $<TARGET_FILE:${test}> DEPENDS ${test})
 endforeach()
@@ -100,14 +112,7 @@ set(benchmarks benchmark_istarts_with)
 foreach(benchmark ${benchmarks})
   message(STATUS "Configuring benchmark: ${benchmark}")
   add_executable(${benchmark} ${benchmark}.cpp ${sources} ${headers})
-
-  if(MSVC)
-    target_link_libraries(${benchmark} debug ${CELERO_INSTALL_PREFIX}/lib/celerod.lib PowrProf.lib)
-    target_link_libraries(${benchmark} optimized ${CELERO_INSTALL_PREFIX}/lib/celero.lib PowrProf.lib)
-  elseif (UNIX)
-    target_link_libraries(${benchmark} ${CELERO_INSTALL_PREFIX}/lib/libcelero.lib)
-  endif()
-
+  target_link_libraries(${benchmark} celero ${CELERO_EXTRA_LIBS})
   add_dependencies(${benchmark} celero)
   add_custom_target(run_${benchmark} ALL $<TARGET_FILE:${benchmark}> DEPENDS ${benchmark})
 endforeach()
