Add test. More CMake fixes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,14 +11,6 @@ if(NOT CMAKE_BUILD_TYPE)
     message(STATUS "Configuring default CMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}")
 endif()
 
-if(WIN32)
-  set(CMAKE_DEBUG_POSTFIX d)
-endif()
-if(CMAKE_BUILD_TYPE MATCHES "Release")
-  set(CMAKE_BUILD_POSTFIX "${CMAKE_RELEASE_POSTFIX}")
-endif()
-
-
 if(CMAKE_CXX_COMPILER_ID STREQUAL "Clang" OR CMAKE_COMPILER_IS_GNUCXX)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror")
     include(CheckCXXCompilerFlag)
@@ -83,7 +75,11 @@ add_library(libcelero UNKNOWN IMPORTED)
 include_directories(${INSTALL_DIR}/include)
 set_property(TARGET libcelero
   PROPERTY
-  IMPORTED_LOCATION "${INSTALL_DIR}/lib/${CMAKE_STATIC_LIBRARY_PREFIX}celero${CMAKE_DEBUG_POSTFIX}${CMAKE_STATIC_LIBRARY_SUFFIX}")
+  IMPORTED_LOCATION_DEBUG "${INSTALL_DIR}/lib/${CMAKE_STATIC_LIBRARY_PREFIX}celerod${CMAKE_STATIC_LIBRARY_SUFFIX}")
+set_property(TARGET libcelero
+  PROPERTY
+  IMPORTED_LOCATION_RELEASE "${INSTALL_DIR}/lib/${CMAKE_STATIC_LIBRARY_PREFIX}celero${CMAKE_STATIC_LIBRARY_SUFFIX}")
+
 if(MSVC)
   set(CELERO_EXTRA_LIBS PowrProf.lib)
 endif()
