--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,34 +2,36 @@ cmake_minimum_required(VERSION 2.8)
 project(string_benchmark CXX)
 
 if(NOT CMAKE_BUILD_TYPE)
-    set(CMAKE_BUILD_TYPE "Release" CACHE STRING
-        "Choose the type of build, options are: Debug Release RelWithDebInfo MinSizeRel."
-        FORCE)
-    message(STATUS "Configuring default CMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}")
+  set(CMAKE_BUILD_TYPE "Release" CACHE STRING
+    "Choose the type of build, options are: Debug Release RelWithDebInfo MinSizeRel."
+    FORCE)
+  message(STATUS "Configuring default CMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}")
+else()
+  message(STATUS "Configuring CMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}")
+endif()
+
+message(STATUS "Compiler ${CMAKE_CXX_COMPILER_ID} ${CMAKE_CXX_COMPILER_VERSION} (${CMAKE_CXX_COMPILER})")
+include(CheckCXXCompilerFlag)
+CHECK_CXX_COMPILER_FLAG("-std=c++14" COMPILER_SUPPORTS_CXX14)
+CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)
+if(COMPILER_SUPPORTS_CXX14)
+  message(STATUS "C++ Standard: C++14")
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
+elseif(COMPILER_SUPPORTS_CXX11 OR MSVC_VERSION >= 1900)
+  message(STATUS "C++ Standard: C++11")
+  if(CMAKE_CXX_COMPILER_ID STREQUAL "Clang" OR CMAKE_COMPILER_IS_GNUCXX)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+  endif()
+else()
+    message(WARNING "Compiler ${CMAKE_CXX_COMPILER} has no C++ 11/14 support.")
 endif()
 
 if(CMAKE_CXX_COMPILER_ID STREQUAL "Clang" OR CMAKE_COMPILER_IS_GNUCXX)
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror")
-    include(CheckCXXCompilerFlag)
-    CHECK_CXX_COMPILER_FLAG("-std=c++14" COMPILER_SUPPORTS_CXX14)
-    CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)
-    CHECK_CXX_COMPILER_FLAG("-std=c++0x" COMPILER_SUPPORTS_CXX0X)
-    if(COMPILER_SUPPORTS_CXX14)
-        message(STATUS "C++ Standard: C++14")
-        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
-    elseif(COMPILER_SUPPORTS_CXX11)
-        message(STATUS "C++ Standard: C++11")
-        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
-    elseif(COMPILER_SUPPORTS_CXX0X)
-        message(STATUS "C++ Standard: C++0x")
-        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
-    else()
-        message(WARNING "Compiler ${CMAKE_CXX_COMPILER} has no C++ 0x/11/14 support.")
-    endif()
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror")
 endif()
 
 if(MSVC)
-  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /MP")
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /MP /W4")
 endif()
 
 find_package(Boost 1.54.0)
@@ -44,8 +46,7 @@ find_package(Git REQUIRED)
 include(ExternalProject)
 
 message(STATUS "Configuring Catch")
-ExternalProject_Add(
-  catch
+ExternalProject_Add(catch
   GIT_REPOSITORY https://github.com/philsquared/Catch.git
   UPDATE_COMMAND ""
   CONFIGURE_COMMAND ""
@@ -56,27 +57,28 @@ ExternalProject_Get_Property(catch SOURCE_DIR)
 include_directories(${SOURCE_DIR}/include)
 
 message(STATUS "Configuring Celero")
-ExternalProject_Add(
-    celero
-    GIT_REPOSITORY https://github.com/DigitalInBlue/Celero.git
-    UPDATE_COMMAND ""
-    INSTALL_DIR ${CMAKE_BINARY_DIR}
-    CMAKE_ARGS
-      -DCMAKE_BUILD_TYPE:STRING=${CMAKE_BUILD_TYPE}
-      -DCMAKE_INSTALL_PREFIX:STRING=${CMAKE_BINARY_DIR}
-      -DCELERO_COMPILE_DYNAMIC_LIBRARIES:BOOL=OFF
-      -DCELERO_ENABLE_EXPERIMENTS:BOOL=OFF
-      -DCELERO_ENABLE_FOLDERS:BOOL=OFF)
+ExternalProject_Add(celero
+  GIT_REPOSITORY https://github.com/DigitalInBlue/Celero.git
+  UPDATE_COMMAND ""
+  INSTALL_DIR ${CMAKE_BINARY_DIR}
+  CMAKE_ARGS
+    -DCMAKE_BUILD_TYPE:STRING=${CMAKE_BUILD_TYPE}
+    -DCMAKE_INSTALL_PREFIX:STRING=${CMAKE_BINARY_DIR}
+    -DCELERO_COMPILE_DYNAMIC_LIBRARIES:BOOL=OFF
+    -DCELERO_ENABLE_EXPERIMENTS:BOOL=OFF
+    -DCELERO_ENABLE_FOLDERS:BOOL=OFF)
 ExternalProject_Get_Property(celero SOURCE_DIR)
 ExternalProject_Get_Property(celero INSTALL_DIR)
 add_library(libcelero UNKNOWN IMPORTED)
 include_directories(${INSTALL_DIR}/include)
 set_property(TARGET libcelero
   PROPERTY
-  IMPORTED_LOCATION_DEBUG "${INSTALL_DIR}/lib/${CMAKE_STATIC_LIBRARY_PREFIX}celerod${CMAKE_STATIC_LIBRARY_SUFFIX}")
+  IMPORTED_LOCATION_DEBUG
+  "${INSTALL_DIR}/lib/${CMAKE_STATIC_LIBRARY_PREFIX}celerod${CMAKE_STATIC_LIBRARY_SUFFIX}")
 set_property(TARGET libcelero
   PROPERTY
-  IMPORTED_LOCATION_RELEASE "${INSTALL_DIR}/lib/${CMAKE_STATIC_LIBRARY_PREFIX}celero${CMAKE_STATIC_LIBRARY_SUFFIX}")
+  IMPORTED_LOCATION_RELEASE
+  "${INSTALL_DIR}/lib/${CMAKE_STATIC_LIBRARY_PREFIX}celero${CMAKE_STATIC_LIBRARY_SUFFIX}")
 
 if(MSVC)
   set(CELERO_EXTRA_LIBS PowrProf.lib)
@@ -85,7 +87,11 @@ add_dependencies(libcelero celero)
 
 file(GLOB headers *.hpp)
 file(GLOB sources fixture.cpp)
-set(benchmarks benchmark_istarts_with benchmark_iends_with)
+set(benchmarks
+  benchmark_starts_with
+  benchmark_ends_with
+  benchmark_istarts_with
+  benchmark_iends_with)
 
 foreach(benchmark ${benchmarks})
   set(btarget ${benchmark}) # benchmark char-based strings
