Make benchmarks depend on (successful) tests.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -85,6 +85,12 @@ if(MSVC)
 endif()
 add_dependencies(libcelero celero)
 
+set(test test_fixture)
+message(STATUS "Configuring test: ${test}")
+add_executable(${test} ${test}.cpp)
+add_dependencies(${test} catch libcelero)
+add_custom_target(run_${test} ALL $<TARGET_FILE:${test}> DEPENDS ${test})
+
 file(GLOB headers *.hpp)
 file(GLOB sources fixture.cpp)
 set(benchmarks
@@ -99,7 +105,7 @@ foreach(benchmark ${benchmarks})
   add_executable(${btarget} ${benchmark}.cpp ${sources} ${headers})
   add_dependencies(${btarget} libcelero)
   target_link_libraries(${btarget} libcelero ${CELERO_EXTRA_LIBS})
-  add_custom_target(run_${btarget} ALL $<TARGET_FILE:${btarget}> DEPENDS ${btarget})
+  add_custom_target(run_${btarget} ALL $<TARGET_FILE:${btarget}> DEPENDS run_${test} ${btarget})
 
   set(btarget ${benchmark}_wchar) # benchmark wchar_t-based strings
   message(STATUS "Configuring benchmark: ${btarget}")
@@ -107,15 +113,5 @@ foreach(benchmark ${benchmarks})
   set_property(TARGET ${btarget} PROPERTY COMPILE_DEFINITIONS STRING_BENCHMARK_WCHAR=1)
   add_dependencies(${btarget} libcelero)
   target_link_libraries(${btarget} libcelero ${CELERO_EXTRA_LIBS})
-  add_custom_target(run_${btarget} ALL $<TARGET_FILE:${btarget}> DEPENDS ${btarget})
-endforeach()
-
-enable_testing()
-set(tests test_fixture)
-foreach(test ${tests})
-  message(STATUS "Configuring test: ${test}")
-  add_executable(${test} ${test}.cpp)
-  add_dependencies(${test} catch libcelero)
-  add_test(NAME ${test} COMMAND ${test})
-  add_custom_target(run_${test} ALL $<TARGET_FILE:${test}> DEPENDS ${test})
+  add_custom_target(run_${btarget} ALL $<TARGET_FILE:${btarget}> DEPENDS run_${test} ${btarget})
 endforeach()
