WIP: Add script generating benchmark plots using Bokeh
[ci skip]

--- a/.editorconfig
+++ b/.editorconfig
@@ -30,3 +30,11 @@ trim_trailing_whitespace = true
 indent_size = 2
 indent_style = space
 trim_trailing_whitespace = true
+
+# Python scripts
+[*.py]
+indent_style = space
+indent_size = 4
+max_line_length = 100
+insert_final_newline = true
+trim_trailing_whitespace = true
