Generate .csv reports for _wchar benchmarks

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -115,5 +115,7 @@ foreach(benchmark ${benchmarks})
   set_property(TARGET ${btarget} PROPERTY COMPILE_DEFINITIONS STRING_BENCHMARK_WCHAR=1)
   add_dependencies(${btarget} libcelero)
   target_link_libraries(${btarget} libcelero ${CELERO_EXTRA_LIBS})
-  add_custom_target(run_${btarget} ALL $<TARGET_FILE:${btarget}> DEPENDS run_${test} ${btarget})
+  add_custom_target(run_${btarget} ALL
+    COMMAND ${btarget} ARGS -t ${btarget}.csv
+    DEPENDS run_${test} ${btarget})
 endforeach()
